--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "bower": "^1.3.12",
-    "ejs": "*",
-    "express": "3.x",
+    "express": "4.x",
+    "express-handlebars": "^1.2.1",
     "zombie": "*"
   },
   "scripts": {
