--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "grunt-autoprefixer": "^0.7.2",
     "grunt-contrib-cssmin": "^0.7.0",
     "grunt-contrib-htmlmin": "^0.1.3",
+    "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-uglify": "^0.2.7",
     "grunt-contrib-watch": "^0.5.3",
+    "grunt-gh-pages": "^1.0.0",
     "grunt-myth": "^1.0.1",
-    "grunt-processhtml": "^0.2.9",
-    "grunt-gh-pages": "^1.0.0"
+    "grunt-processhtml": "^0.2.9"
   }
 }
