--- a/.gitignore
+++ b/.gitignore
@@ -1,76 +1,6 @@
-#################
-## Eclipse
-#################
-
-*.pydevproject
-.project
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# CDT-specific
-.cproject
-
-# PDT-specific
-.buildpath
-
-
-#############
-## Windows detritus
-#############
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Mac crap
-.DS_Store
-
-
-#############
-## Intellij
-#############
-
-nbproject
-manifest.mf
-build.xml
-
-.project
-.settings
-.idea/*
-*.iml
-
-
-#############
-## Project
-#############
-node_modules/*
-npm-debug.log
-docs
-vendor
+node_modules
+dist
+.tmp
+.sass-cache
 bower_components
-
-test/test-results.xml
-test-results.xml
-
-dist/
+test/bower_components
