--- a/package.json
+++ b/package.json
@@ -1,31 +1,43 @@
 {
-  "name": "locomotivaml",
-  "version": "1.0.0",
-  "description": "locotiva website",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "private": true,
+  "engines": {
+    "node": ">=0.12.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/locomotivaml/locomotivaml.github.io.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/locomotivaml/locomotivaml.github.io/issues"
-  },
-  "homepage": "https://github.com/locomotivaml/locomotivaml.github.io#readme",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-autoprefixer": "^0.7.2",
-    "grunt-contrib-cssmin": "^0.7.0",
-    "grunt-contrib-htmlmin": "^0.1.3",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-uglify": "^0.2.7",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-gh-pages": "^1.0.0",
-    "grunt-myth": "^1.0.1",
-    "grunt-processhtml": "^0.2.9"
+    "babel-core": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "browser-sync": "^2.2.1",
+    "del": "^1.1.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.1",
+    "gulp-babel": "^6.1.1",
+    "gulp-cache": "^0.4.2",
+    "gulp-cssnano": "^2.0.0",
+    "gulp-eslint": "^0.13.2",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.0",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^3.0.0",
+    "main-bower-files": "^2.5.0",
+    "wiredep": "^2.2.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true,
+      "browser": true
+    },
+    "rules": {
+      "quotes": [
+        2,
+        "single"
+      ]
+    }
   }
 }
