--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
     "reset-css": "^2.0.2011012603",
-    "jquery.mb.ytplayer": "^2.9.14"
+    "jquery.mb.ytplayer": "^2.9.14",
+    "flexboxgrid": "^6.3.0"
   }
 }
